--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="inventory">INVENTORY</string>
     <string name="settings">SETTINGS</string>
     <string name="begin_scanning">BEGIN SCANNING</string>
+    <string name="prepare_shipment">Prepare Shipment</string>
+    <string name="carrier">Carrier</string>
+    <string name="customer">Customer</string>
+    <string name="order">Order</string>
+    <string name="search">Search</string>
 </resources>
