--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="customer">Customer</string>
     <string name="order">Order</string>
     <string name="search">Search</string>
+    <string name="device_counter">Devices Found: %d</string>
 </resources>
