-> Receive Shipment with filter type => INBOUND

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,6 @@
     <string name="no_order_found">Oops! Order not found</string>
     <string name="no_carrier_found">Oops! Carrier not found</string>
     <string name="myworkapp_io">MyWorkApp.io</string>
+    <string name="action_not_supported">Document downloaded. Unable to open the same due to unsupported file type.</string>
+
 </resources>
