--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Work App</string>
+    <string name="app_name">MWorkApp</string>
 
 
     <string name="get_location_permission">Get location permission</string>
